# silent_speech

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  adapted_emg_transformer.py  align.py  architecture.py  asr_evaluation.py  attention.py  augmentations.py  build_hdf5.py  conformer.py  conv_blocks.py  custom_models.py  data_proportion.py  data_utils.py  download_data.py  eval.sh  evaluate.py  ffn.py  get_lexicon.py  get_vocab.py  hdf5_dataset.py  make_vocoder_trainset.py  models.py  patch_embedding.py  pos_embedding.py  pyproject.toml  read_emg.py  recognition_model.py  requirements-dev.txt  requirements.txt  seeds.sh  transduction_model.py  transformer.py  vocoder.py  wer_results.csv
.github/workflows/: pre-commit.yml
KenLM/: download_LM.py  gaddy_lexicon.txt
config/: recognition_model.json  transduction_model.json
data_collection/: clean_audio.py  read_book.py  record_data.py  record_reading.py
images/: phoneme_confusability.eps
notebooks/: silent_proportions_batch.csv
