[project]
name = "silent_speech"
version = "0.1.0"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "absl-py",
    "numpy",
    "librosa",
    "pysoundfile",
    "matplotlib",
    "scipy",
    "numba",
    "unidecode",
    "tqdm",
    "jiwer==2.2.1",
    "praat-textgrids",
    "noisereduce",
    "torchinfo",
    "tensorboard",
    "timm",
    "speechbrain",
    "h5py",
    "transformers",
    "huggingface_hub<1.0",
    "omegaconf",
    "torch-tb-profiler",
    "pandas",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "resampy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
    "pylint",
    "mypy",
    "bandit",
]

[tool.isort]
py_version = 312
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
lint.ignore = ["E501"]  # line too long (handled by black)

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 15

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "R0903",  # too-few-public-methods
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
